--- a/productsbyPrice.html
+++ b/productsbyPrice.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ValoSkins</title>
+	<title>All Products || ValoSkins</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,56 +29,52 @@
 		
 		</ul>
 	</nav>
-		<div class="cart"> 
+			<div class="cart">
 		<a href="cart.html">
 			<img src="assets/images/ShoppingBag.png" width="30px" height= "30px">
 			<span>0</span>
 			 </a>
 		<img src="assets/images/Menu.png" class="menu-icon" onclick="menutoggle()">
 		</div>
-		</div>
-	<div class="row">
-		<div class="col-2">
-			<h1> Give Your Guns A New Look! </h1>
-			<p>Flex Your Skins and Win Games</p>
-			<a href="products.html" class="btn"> Shop now &#8599;</a>
-			</div>
-		<div class="col-2">
-			<img src="assets/images/Skins.png">
-		</div>
-		</div>
+	</div>
+	
 	</div>
 </div>
 
 
-<!-- Most Bought !-->
-	<div class="bestseller">
-		<div class="small-container">
-			<div class="row">
-		<div class="col-3">
-			<img src="assets/images/IonOperator.png">
-		</div>
-		<div class="col-3">
-			<img src="assets/images/GlitchpopPhantom.png">
-		</div>	
-		<div class="col-3">
-			<img src="assets/images/PrimeVandal.png">
-			</div>		
-		</div>
-		</div>
 
-	</div>
-		<!-- FEATURED PRODUCTS !-->
 			<div class="small-container">
-			<h2 class= "title"> -- Our Products --</h2>
+				<div class="row row-2">
+			<h2 class> -- All Products --</h2>
+
+			<div class="dropdown">
+				<button>Sort</button>
+				 <div class="dropdown-content">
+  				<a href="products.html">Default</a>
+  				<a href="productsbyPrice.html">By Price</a>
+ 			</div>
+			</div>
+
+
 			<div class="row">
+
 				<div class="col-4">
-					<a href="product-details.html"><img src="assets/images/BlastXPhantom.png"> </a>
-					<a href="product-details.html"><h4> BlastX Phantom </h4> </a>
+					<a href="glitchpopfrenzy-details.html"><img src="assets/images/GlitchpopFrenzy.png"> </a>
+					<a href="glitchpopfrenzy-details.html"><h4> Glitchpop Frenzy </h4> </a>
+					<div class="rating">
+					</div>
+					<p>PHP 500.00 </p>
+					<a class="add-cart cart2"  href="#" >Add To Cart</a>
+				</div>
+
+				<div class="col-4">
+					<a href="blastxphantom-details.html"><img src="assets/images/BlastXPhantom.png"> </a>
+					<a href="blastxphantom-details.html"><h4> BlastX Phantom </h4> </a>
 					<div class="rating">
 
 					</div>
 					<p>PHP 600.00 </p>
+					<a class="add-cart cart1"  href="#" >Add To Cart</a>
 				</div>
 
 				<div class="col-4">
@@ -87,75 +83,37 @@
 					<div class="rating">
 					</div>
 					<p>PHP 600.00 </p>
-
-				</div>
-				<div class="col-4">
-					<img src="assets/images/OniClaw.png">
-					<h4> Oni Claw </h4>
-					<div class="rating">
-					</div>
-					<p>PHP 1500.00 </p>
+					<a class="add-cart cart4"  href="#" >Add To Cart</a>
 				</div>
 
-				<div class="col-4">
-					<img src="assets/images/SovereignGhost.png">
-					<h4> Sovereign Ghost </h4>
-					<div class="rating">
-					</div>
-					<p>PHP 800.00 </p>
-				</div>
-				</div>
-
-
-			<h2 class="title"> -- More Products --</h2>	
-			<div class="row">
 				<div class="col-4">
 					<img src="assets/images/IonPhantom.png">
 					<h4> Ion Phantom </h4>
 					<div class="rating">
 					</div>
 					<p>PHP 600.00 </p>
+					<a class="add-cart cart6"  href="#" >Add To Cart</a>
+				</div>
+
+
+			<div class="row">
+
+				<div class="col-4">
+					<img src="assets/images/ReaverSheriff.png">
+					<h4> Reaver Sheriff </h4>
+					<div class="rating">
+					</div>
+					<p>PHP 600.00 </p>
+					<a class="add-cart cart17"  href="#" >Add To Cart</a>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/OniPhantom.png">
-					<h4> Oni Phantom </h4>
+					<img src="assets/images/IonOperator.png">
+					<h4> Ion Operator </h4>
 					<div class="rating">	
 					</div>
-					<p>PHP 700.00 </p>
-				</div>
-
-				<div class="col-4">
-					<img src="assets/images/PrimePhantom.png">
-					<h4> Prime Phantom </h4>
-					<div class="rating">
-					</div>
-					<p>PHP 900.00 </p>
-				</div>
-
-				<div class="col-4">
-					<img src="assets/images/ReaverKnife.png">
-					<h4> Reaver Knife </h4>
-					<div class="rating">
-					</div>
-					<p>PHP 1300.00 </p>
-				</div>
-
-				<div class="row">
-				<div class="col-4">
-					<img src="assets/images/ReaverOperator.png">
-					<h4> Reaver Operator </h4>
-					<div class="rating">
-					</div>
-					<p>PHP 1000.00 </p>
-				</div>
-
-				<div class="col-4">
-					<img src="assets/images/ReaverVandal.png">
-					<h4> Reaver Vandal </h4>
-					<div class="rating">
-					</div>
-					<p>PHP 700.00 </p>
+					<p>PHP 650.00 </p>
+					<a class="add-cart cart5"  href="#" >Add To Cart</a>
 				</div>
 
 				<div class="col-4">
@@ -164,18 +122,102 @@
 					<div class="rating">
 					</div>
 					<p>PHP 650.00 </p>
+					<a class="add-cart cart14"  href="#" >Add To Cart</a>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/SovereignKnife.png">
-					<h4> Sovereign Knife </h4>
-					<div class="rating">
-
+					<img src="assets/images/OniPhantom.png">
+					<h4> Oni Phantom </h4>
+					<div class="rating">	
 					</div>
-					<p>PHP 2000.00 </p>
+					<p>PHP 700.00 </p>
+					<a class="add-cart cart8"  href="#" >Add To Cart</a>
 				</div>
+
+
+				<div class="row">
+
+				<div class="col-4">
+					<img src="assets/images/ReaverVandal.png">
+					<h4> Reaver Vandal </h4>
+					<div class="rating">
+					</div>
+					<p>PHP 700.00 </p>
+					<a class="add-cart cart13"  href="#" >Add To Cart</a>
+				</div>
+
+				<div class="col-4">
+					<a href="glitchpopphantom-details.html"><img src="assets/images/GlitchpopPhantom.png"> </a>
+					<a href="glitchpopphantom-details.html"><h4> Glitchpop Phantom </h4> </a>
+					<div class="rating">
+					</div>
+					<p>PHP 800.00 </p>
+				</div>
+
+				<div class="col-4">
+					<img src="assets/images/SovereignGhost.png">
+					<h4> Sovereign Ghost </h4>
+					<div class="rating">
+					</div>
+					<p>PHP 800.00 </p>
+					<a class="add-cart cart16"  href="#" >Add To Cart</a>
+				</div>
+
+					<div class="col-4">
+					<img src="assets/images/PrimePhantom.png">
+					<h4> Prime Phantom </h4>
+					<div class="rating">	
+					</div>
+					<p>PHP 900.00 </p>
+					<a class="add-cart cart9"  href="#" >Add To Cart</a>
+				</div>
+
+				<div class="col-4">
+					<img src="assets/images/PrimeVandal.png">
+					<h4> Prime Vandal </h4>
+					<div class="rating">	
+					</div>
+					<p>PHP 900.00 </p>
+					<a class="add-cart cart10"  href="#" >Add To Cart</a>
+				</div>
+
+				<div class="col-4">
+					<img src="assets/images/SpectrumClassic.png">
+					<h4> Spectrum Classic </h4>
+					<div class="rating">
+					</div>
+					<p>PHP 900.00 </p>
+					<a class="add-cart cart15"  href="#" >Add To Cart</a>
+				</div>
+
+				<div class="col-4">
+					<img src="assets/images/ValorantGOKnife.png">
+					<h4> Valorant GO! Knife </h4>
+					<div class="rating">
+					</div>
+					<p>PHP 950.00 </p>
+					<a class="add-cart cart19"  href="#" >Add To Cart</a>
+				</div>
+
+				<div class="col-4">
+					<img src="assets/images/ElderflameVandal.png">
+					<h4> Elderflame Vandal </h4>
+					<div class="rating">
+					</div>
+					<p>PHP 1000.00 </p>
+					<a class="add-cart cart20"  href="#" >Add To Cart</a>
+				</div>	
 			</div>
+
+
+		<div class="page-btn">
+		<a href="productsbyPrice.html"> <span>1</span> 
+			<a href="productsbyPricepage2.html">  <span>2</span>
+			<span>&#8594;</span>
 		</div>
+
+		</div>
+	</div>
 
 	<!-- Offer  -->
 		<div class="offer"> 
@@ -212,10 +254,8 @@
 		</div>
 	</div>
 
-
 <!--- cart --->
 	<script src="assets/js/main.js"></script>
-	
 	<!------ Toggle Menu ------>
 <script>
     var MenuItems = document.getElementById("MenuItems");
