--- a/products.html
+++ b/products.html
@@ -58,7 +58,7 @@
 
 			<div class="row">
 				<div class="col-4">
-					<a href="blastxphantom-details.html"><img src="assets/images/blastxphantom.png"> </a>
+					<a href="product-details.html"><img src="assets/images/blastxphantom.png"> </a>
 					<a href="blastxphantom-details.html"><h4> BlastX Phantom </h4> </a>
 					<div class="rating">
 
