--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<h2 class= "title"> -- Our Products --</h2>
 			<div class="row">
 				<div class="col-4">
-					<a href="product-details.html"><img src="assets/images/blastxphantom.png"> </a>
+					<a href="blastxphantom-details.html"><img src="assets/images/blastxphantom.png"> </a>
 					<a href="product-details.html"><h4> BlastX Phantom </h4> </a>
 					<div class="rating">
 
