--- a/productsbyPricepage2.html
+++ b/productsbyPricepage2.html
@@ -57,8 +57,8 @@
 			<div class="row">
 			
 			<div class="col-4">
-					<img src="assets/images/ReaverOperator.png">
-					<h4> Reaver Operator </h4>
+					<a href="ReaverOperator-details.html"><img src="assets/images/ReaverOperator.png"></a>
+					<a href="ReaverOperator-details.html"><h4> Reaver Operator </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1000.00 </p>
@@ -66,8 +66,8 @@
 				</div>
 
 			<div class="col-4">
-		<<img src="assets/images/ReaverKnife.png">
-					<h4> Reaver Knife </h4>
+					<a href="reaverknife-details.html"><img src="assets/images/ReaverKnife.png"></a>
+					<a href="reaverknife-details.html"><h4> Reaver Knife </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1300.00 </p>
@@ -75,8 +75,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/OniClaw.png">
-					<h4> Oni Claw </h4>
+					<a href="oniclaw-details.html"><img src="assets/images/OniClaw.png"></a>
+					<a href="oniclaw-details.html"><h4> Oni Claw </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 1500.00 </p>
@@ -85,8 +85,8 @@
 
 			
 			<div class="col-4">
-					<img src="assets/images/SovereignKnife.png">
-					<h4> Sovereign Knife </h4>
+					<a href="SovereignKnife-details.html"><img src="assets/images/SovereignKnife.png"></a>
+					<a href="SovereignKnife-details.html"><h4> Sovereign Knife </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 2000.00 </p>
@@ -115,7 +115,7 @@
 				<p>Available on Valo Skins</p>
 				<h1>Elderflame Vandal</h1>
 				<small>The Elderflame Vandal has some unique visual finish or animation effects. It is designed too look like a dragon that has a movement animation as of a dragon when equipped. </small>
-				<a href="" class="btn">BUY NOW &#8599; </a>
+				<a href="ElderflameVandal-details.html" class="btn">BUY NOW &#8599; </a>
 				</div>
 			</div>
 		</div>
@@ -140,7 +140,7 @@
 	</div>
 
 <!--- cart --->
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/scriptproductsbypricepage2.js"></script>
 	<!------ Toggle Menu ------>
 <script>
     var MenuItems = document.getElementById("MenuItems");
