--- a/singularitysheriff-details.html
+++ b/singularitysheriff-details.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>BlastX Phantom || ValoSkins</title>
+	<title>Singularity Sheriff || ValoSkins</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 		
 		</ul>
 	</nav>
-		<div class="cart">
+			<div class="cart">
 		<a href="cart.html">
 			<img src="assets/images/ShoppingBag.png" width="30px" height= "30px">
 			<span>0</span>
@@ -41,18 +41,18 @@
 </div>
 
 <!--------------- single product details ----------->
-		<div class="small-container individual-product">
+		<div class="container individual-product">
 			<div class="row">
 				<div class="col-2">
-					<img src="assets/images/BlastXPhantom.png" width="100%">
+					<img src="assets/images/singularitysheriff.png" width="100%">
 				</div>
 
 				<div class="col-2">
 					<h5>Home/Skins</h5>
-					<h2>BlastX Phantom</h2>
-					<h4>PHP 600.00</h4>
-						<input type="number" id="quantity" value="1" >
-						<button class="add-to-cart cart1">Add To Cart</button>
+					<h2>Singularity Sheriff</h2>
+					<h4>PHP 650.00</h4>
+						<input type="number" id="quantity" value ="1" >
+						<button class="add-to-cart cart14">Add To Cart</button>
 				</div>
 			</div>
 		</div>
@@ -98,8 +98,11 @@
 				</div>
 
 
+
+
 <!--- add to cart --->
-	<script src="assets/js/BlastXPhantom.js"></script>
+	<script src="assets/js/singularitysheriff.js"></script>
+
 	<!------ Toggle Menu ------>
 <script>
     var MenuItems = document.getElementById("MenuItems");
