--- a/glitchpopfrenzy-details.html
+++ b/glitchpopfrenzy-details.html
@@ -51,8 +51,8 @@
 					<h5>Home/Skins</h5>
 					<h2>Glitchpop Frenzy</h2>
 					<h4>PHP 500.00</h4>
-						<input type="number" value="1">
-						<a class="add-cart cart2" href="#">Add To Cart</a>
+						<input type="number" id="quantity" value ="1" >
+						<button class="add-to-cart cart2">Add To Cart</button>
 				</div>
 			</div>
 		</div>
@@ -101,7 +101,7 @@
 
 
 <!--- add to cart --->
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/GlitchpopFrenzy.js"></script>
 
 	<!------ Toggle Menu ------>
 <script>
