--- a/glitchpopphantom-details.html
+++ b/glitchpopphantom-details.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>All Products || ValoSkins</title>
+	<title>Glitchpop Phantom || ValoSkins</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,8 +51,8 @@
 					<h5>Home/Skins</h5>
 					<h2>Glitchpop Phantom</h2>
 					<h4>PHP 800.00</h4>
-						<input type="number" value="1">
-						<a href="#" class="add-cart cart3">Add To Cart</a>
+						<input type="number" id="quantity" value ="1" >
+						<button class="add-to-cart cart3">Add To Cart</button>
 				</div>
 			</div>
 		</div>
@@ -98,7 +98,7 @@
 				</div>
 
 <!--- cart --->
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/GlitchpopPhantom.js"></script>
 	
 	<!------ Toggle Menu ------>
 <script>
