--- a/glitchpopvandal-details.html
+++ b/glitchpopvandal-details.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Glitchpop Frenzy || ValoSkins</title>
+	<title>Glitchpop Vandal || ValoSkins</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,8 +51,8 @@
 					<h5>Home/Skins</h5>
 					<h2>Glitchpop Vandal</h2>
 					<h4>PHP 600.00</h4>
-						<input type="number" value="1">
-						<a class="add-cart cart4" href="#">Add To Cart</a>
+						<input type="number" id="quantity" value ="1" >
+						<button class="add-to-cart cart4">Add To Cart</button>
 				</div>
 			</div>
 		</div>
@@ -101,7 +101,7 @@
 
 
 <!--- add to cart --->
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/GlitchpopVandal.js"></script>
 
 	<!------ Toggle Menu ------>
 <script>
