--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 			<h2 class= "title"> -- Our Products --</h2>
 			<div class="row">
 				<div class="col-4">
-					<a href="blastxphantom-details.html"><img src="assets/images/blastxphantom.png"> </a>
-					<a href="product-details.html"><h4> BlastX Phantom </h4> </a>
+					<a href="blastxphantom-details.html"><img src="assets/images/BlastXPhantom.png"> </a>
+					<a href="blastxphantom-details.html"><h4> BlastX Phantom </h4> </a>
 					<div class="rating">
 
 					</div>
@@ -90,16 +90,16 @@
 
 				</div>
 				<div class="col-4">
-					<img src="assets/images/OniClaw.png">
-					<h4> Oni Claw </h4>
-					<div class="rating">
+					<a href="oniclaw-details.html"><img src="assets/images/OniClaw.png"></a>
+					<a href="oniclaw-details.html"><h4> Oni Claw </h4></a>
+					<div class="rating">	
 					</div>
 					<p>PHP 1500.00 </p>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/SovereignGhost.png">
-					<h4> Sovereign Ghost </h4>
+					<a href="SovereignGhost-details.html"><img src="assets/images/SovereignGhost.png"></a>
+					<a href="SovereignGhost-details.html"><h4> Sovereign Ghost </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 800.00 </p>
@@ -110,32 +110,32 @@
 			<h2 class="title"> -- More Products --</h2>	
 			<div class="row">
 				<div class="col-4">
-					<img src="assets/images/IonPhantom.png">
-					<h4> Ion Phantom </h4>
+					<a href="ionphantom-details.html"><img src="assets/images/IonPhantom.png"></a>
+					<a href="ionphantom-details.html"><h4> Ion Phantom </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 600.00 </p>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/OniPhantom.png">
-					<h4> Oni Phantom </h4>
+					<a href="oniphantom-details.html"><img src="assets/images/OniPhantom.png"></a>
+					<a href="oniphantom-details.html"><h4> Oni Phantom </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 700.00 </p>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/PrimePhantom.png">
-					<h4> Prime Phantom </h4>
-					<div class="rating">
+					<a href="primephantom-details.html"><img src="assets/images/PrimePhantom.png"></a>
+					<a href="primephantom-details.html"><h4> Prime Phantom </h4></a>
+					<div class="rating">	
 					</div>
 					<p>PHP 900.00 </p>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/ReaverKnife.png">
-					<h4> Reaver Knife </h4>
+					<a href="reaverknife-details.html"><img src="assets/images/ReaverKnife.png"></a>
+					<a href="reaverknife-details.html"><h4> Reaver Knife </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1300.00 </p>
@@ -143,34 +143,33 @@
 
 				<div class="row">
 				<div class="col-4">
-					<img src="assets/images/ReaverOperator.png">
-					<h4> Reaver Operator </h4>
+					<a href="ReaverOperator-details.html"><img src="assets/images/ReaverOperator.png"></a>
+					<a href="ReaverOperator-details.html"><h4> Reaver Operator </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1000.00 </p>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/ReaverVandal.png">
-					<h4> Reaver Vandal </h4>
+					<a href="ReaverVandal-details.html"><img src="assets/images/ReaverVandal.png"></a>
+					<a href="ReaverVandal-details.html"><h4> Reaver Vandal </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 700.00 </p>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/Singularity Sheriff.png">
-					<h4> Singularity Sheriff </h4>
+					<<a href="SingularitySheriff-details.html"><img src="assets/images/SingularitySheriff.png"></a>
+					<a href="SingularitySheriff-details.html"><h4> Singularity Sheriff </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 650.00 </p>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/SovereignKnife.png">
-					<h4> Sovereign Knife </h4>
+					<a href="SovereignKnife-details.html"><img src="assets/images/SovereignKnife.png"></a>
+					<a href="SovereignKnife-details.html"><h4> Sovereign Knife </h4></a>
 					<div class="rating">
-
 					</div>
 					<p>PHP 2000.00 </p>
 				</div>
@@ -188,7 +187,7 @@
 				<p>Available on Valo Skins</p>
 				<h1>Elderflame Vandal</h1>
 				<small>The Elderflame Vandal has some unique visual finish or animation effects. It is designed too look like a dragon that has a movement animation as of a dragon when equipped. </small>
-				<a href="" class="btn">BUY NOW &#8599; </a>
+				<a href="ElderflameVandal-details.html" class="btn">BUY NOW &#8599; </a>
 				</div>
 			</div>
 		</div>
