--- a/products.html
+++ b/products.html
@@ -58,7 +58,7 @@
 
 			<div class="row">
 				<div class="col-4">
-					<a href="product-details.html"><img src="assets/images/blastxphantom.png"> </a>
+					<a href="blastxphantom-details.html"><img src="assets/images/BlastXPhantom.png"> </a>
 					<a href="blastxphantom-details.html"><h4> BlastX Phantom </h4> </a>
 					<div class="rating">
 
@@ -97,17 +97,17 @@
 			<div class="row">
 
 				<div class="col-4">
-					<img src="assets/images/IonOperator.png">
-					<h4> Ion Operator </h4>
-					<div class="rating">	
+					<a href="ionoperator-details.html"><img src="assets/images/ionoperator.png"></a>
+					<a href="ionoperator-details.html"><h4>Ion Operator</h4></a>	
+					<div class="rating">
 					</div>
 					<p>PHP 650.00 </p>
 					<a class="add-cart cart5"  href="#" >Add To Cart</a>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/IonPhantom.png">
-					<h4> Ion Phantom </h4>
+					<a href="ionphantom-details.html"><img src="assets/images/IonPhantom.png"></a>
+					<a href="ionphantom-details.html"><h4> Ion Phantom </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 600.00 </p>
@@ -117,8 +117,8 @@
 				
 
 				<div class="col-4">
-					<img src="assets/images/OniClaw.png">
-					<h4> Oni Claw </h4>
+					<a href="oniclaw-details.html"><img src="assets/images/OniClaw.png"></a>
+					<a href="oniclaw-details.html"><h4> Oni Claw </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 1500.00 </p>
@@ -126,8 +126,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/OniPhantom.png">
-					<h4> Oni Phantom </h4>
+					<a href="oniphantom-details.html"><img src="assets/images/OniPhantom.png"></a>
+					<a href="oniphantom-details.html"><h4> Oni Phantom </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 700.00 </p>
@@ -137,8 +137,8 @@
 				<div class="row">
 
 					<div class="col-4">
-					<img src="assets/images/PrimePhantom.png">
-					<h4> Prime Phantom </h4>
+					<a href="primephantom-details.html"><img src="assets/images/PrimePhantom.png"></a>
+					<a href="primephantom-details.html"><h4> Prime Phantom </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 900.00 </p>
@@ -146,8 +146,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/PrimeVandal.png">
-					<h4> Prime Vandal </h4>
+					<a href="primevandal-details.html"><img src="assets/images/PrimeVandal.png"></a>
+					<a href="primevandal-details.html"><h4> Prime Vandal </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 900.00 </p>
@@ -155,8 +155,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/ReaverKnife.png">
-					<h4> Reaver Knife </h4>
+					<a href="reaverknife-details.html"><img src="assets/images/ReaverKnife.png"></a>
+					<a href="reaverknife-details.html"><h4> Reaver Knife </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1300.00 </p>
@@ -164,8 +164,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/ReaverOperator.png">
-					<h4> Reaver Operator </h4>
+					<a href="ReaverOperator-details.html"><img src="assets/images/ReaverOperator.png"></a>
+					<a href="ReaverOperator-details.html"><h4> Reaver Operator </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1000.00 </p>
@@ -176,8 +176,8 @@
 			<div class="row">
 			
 			<div class="col-4">
-					<img src="assets/images/ReaverVandal.png">
-					<h4> Reaver Vandal </h4>
+					<a href="ReaverVandal-details.html"><img src="assets/images/ReaverVandal.png"></a>
+					<a href="ReaverVandal-details.html"><h4> Reaver Vandal </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 700.00 </p>
@@ -185,8 +185,8 @@
 				</div>
 
 			<div class="col-4">
-					<img src="assets/images/Singularity Sheriff.png">
-					<h4> Singularity Sheriff </h4>
+					<a href="SingularitySheriff-details.html"><img src="assets/images/SingularitySheriff.png"></a>
+					<a href="SingularitySheriff-details.html"><h4> Singularity Sheriff </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 650.00 </p>
@@ -194,8 +194,8 @@
 				</div>
 
 			<div class="col-4">
-					<img src="assets/images/SpectrumClassic.png">
-					<h4> Spectrum Classic </h4>
+					<a href="SpectrumClassic-details.html"><img src="assets/images/SpectrumClassic.png"></a>
+					<a href="SpectrumClassic-details.html"><h4> Spectrum Classic </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 900.00 </p>
@@ -203,8 +203,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/SovereignGhost.png">
-					<h4> Sovereign Ghost </h4>
+					<a href="SovereignGhost-details.html"><img src="assets/images/SovereignGhost.png"></a>
+					<a href="SovereignGhost-details.html"><h4> Sovereign Ghost </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 800.00 </p>
@@ -233,7 +233,7 @@
 				<p>Available on Valo Skins</p>
 				<h1>Elderflame Vandal</h1>
 				<small>The Elderflame Vandal has some unique visual finish or animation effects. It is designed too look like a dragon that has a movement animation as of a dragon when equipped. </small>
-				<a href="" class="btn">BUY NOW &#8599; </a>
+				<a href="ElderflameVandal-details.html" class="btn">BUY NOW &#8599; </a>
 				</div>
 			</div>
 		</div>
