--- a/productsbyPrice.html
+++ b/productsbyPrice.html
@@ -68,7 +68,7 @@
 				</div>
 
 				<div class="col-4">
-					<a href="blastxphantom-details.html"><img src="assets/images/blastxphantom.png"> </a>
+					<a href="blastxphantom-details.html"><img src="assets/images/BlastXPhantom.png"> </a>
 					<a href="blastxphantom-details.html"><h4> BlastX Phantom </h4> </a>
 					<div class="rating">
 
@@ -87,8 +87,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/IonPhantom.png">
-					<h4> Ion Phantom </h4>
+					<a href="ionphantom-details.html"><img src="assets/images/IonPhantom.png"></a>
+					<a href="ionphantom-details.html"><h4> Ion Phantom </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 600.00 </p>
@@ -99,8 +99,8 @@
 			<div class="row">
 
 				<div class="col-4">
-					<img src="assets/images/ReaverSheriff.png">
-					<h4> Reaver Sheriff </h4>
+					<a href="ReaverSheriff-details.html"><img src="assets/images/ReaverSheriff.png"></a>
+					<a href="ReaverSheriff-details.html"><h4> Reaver Sheriff </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 600.00 </p>
@@ -108,8 +108,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/IonOperator.png">
-					<h4> Ion Operator </h4>
+					<a href="ionoperator-details.html"><img src="assets/images/ionoperator.png"></a>
+					<a href="ionoperator-details.html"><h4>Ion Operator</h4></a>	
 					<div class="rating">	
 					</div>
 					<p>PHP 650.00 </p>
@@ -117,8 +117,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/Singularity Sheriff.png">
-					<h4> Singularity Sheriff </h4>
+					<a href="SingularitySheriff-details.html"><img src="assets/images/SingularitySheriff.png"></a>
+					<a href="SingularitySheriff-details.html"><h4> Singularity Sheriff </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 650.00 </p>
@@ -126,8 +126,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/OniPhantom.png">
-					<h4> Oni Phantom </h4>
+					<a href="oniphantom-details.html"><img src="assets/images/OniPhantom.png"></a>
+					<a href="oniphantom-details.html"><h4> Oni Phantom </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 700.00 </p>
@@ -138,8 +138,8 @@
 				<div class="row">
 
 				<div class="col-4">
-					<img src="assets/images/ReaverVandal.png">
-					<h4> Reaver Vandal </h4>
+					<a href="ReaverVandal-details.html"><img src="assets/images/ReaverVandal.png"></a>
+					<a href="ReaverVandal-details.html"><h4> Reaver Vandal </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 700.00 </p>
@@ -152,11 +152,12 @@
 					<div class="rating">
 					</div>
 					<p>PHP 800.00 </p>
+					<a class="add-cart cart3"  href="#" >Add To Cart</a>
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/SovereignGhost.png">
-					<h4> Sovereign Ghost </h4>
+					<a href="SovereignGhost-details.html"><img src="assets/images/SovereignGhost.png"></a>
+					<a href="SovereignGhost-details.html"><h4> Sovereign Ghost </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 800.00 </p>
@@ -164,8 +165,8 @@
 				</div>
 
 					<div class="col-4">
-					<img src="assets/images/PrimePhantom.png">
-					<h4> Prime Phantom </h4>
+					<a href="primephantom-details.html"><img src="assets/images/PrimePhantom.png"></a>
+					<a href="primephantom-details.html"><h4> Prime Phantom </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 900.00 </p>
@@ -173,8 +174,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/PrimeVandal.png">
-					<h4> Prime Vandal </h4>
+					<a href="primevandal-details.html"><img src="assets/images/PrimeVandal.png"></a>
+					<a href="primevandal-details.html"><h4> Prime Vandal </h4></a>
 					<div class="rating">	
 					</div>
 					<p>PHP 900.00 </p>
@@ -182,8 +183,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/SpectrumClassic.png">
-					<h4> Spectrum Classic </h4>
+					<a href="SpectrumClassic-details.html"><img src="assets/images/SpectrumClassic.png"></a>
+					<a href="SpectrumClassic-details.html"><h4> Spectrum Classic </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 900.00 </p>
@@ -191,8 +192,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/ValorantGOKnife.png">
-					<h4> Valorant GO! Knife </h4>
+					<a href="ValorantGOKnife-details.html"><img src="assets/images/ValorantGOKnife.png"></a>
+					<a href="ValorantGOKnife-details.html"><h4> Valorant GO! Knife </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 950.00 </p>
@@ -200,8 +201,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/ElderflameVandal.png">
-					<h4> Elderflame Vandal </h4>
+					<a href="ElderflameVandal-details.html"><img src="assets/images/ElderflameVandal.png"></a>
+					<a href="ElderflameVandal-details.html"><h4> Elderflame Vandal </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1000.00 </p>
@@ -230,7 +231,7 @@
 				<p>Available on Valo Skins</p>
 				<h1>Elderflame Vandal</h1>
 				<small>The Elderflame Vandal has some unique visual finish or animation effects. It is designed too look like a dragon that has a movement animation as of a dragon when equipped. </small>
-				<a href="" class="btn">BUY NOW &#8599; </a>
+				<a href="ElderflameVandal-details.html" class="btn">BUY NOW &#8599; </a>
 				</div>
 			</div>
 		</div>
@@ -255,7 +256,7 @@
 	</div>
 
 <!--- cart --->
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/scriptproductsbyprice.js"></script>
 	<!------ Toggle Menu ------>
 <script>
     var MenuItems = document.getElementById("MenuItems");
