--- a/productspage2.html
+++ b/productspage2.html
@@ -49,7 +49,7 @@
 				<div class="dropdown">
 				<button>Sort</button>
 				 <div class="dropdown-content">
-  				<a href="products.html">Default</a>
+  				<a href="products.html">Default</a> 
   				<a href="productsbyPrice.html">By Price</a>
  			</div>
 			</div>
@@ -58,8 +58,8 @@
 
 			<div class="row">
 				<div class="col-4">
-					<img src="assets/images/ReaverSheriff.png">
-					<h4> Reaver Sheriff </h4>
+					<a href="ReaverSheriff-details.html"><img src="assets/images/ReaverSheriff.png"></a>
+					<a href="ReaverSheriff-details.html"><h4> Reaver Sheriff </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 600.00 </p>
@@ -67,17 +67,16 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/SovereignKnife.png">
-					<h4> Sovereign Knife </h4>
+					<a href="SovereignKnife-details.html"><img src="assets/images/SovereignKnife.png"></a>
+					<a href="SovereignKnife-details.html"><h4> Sovereign Knife </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 2000.00 </p>
 					<a class="add-cart cart18"  href="#" >Add To Cart</a>
 				</div>
 				<div class="col-4">
-					
-					<img src="assets/images/ValorantGOKnife.png">
-					<h4> Valorant GO! Knife </h4>
+					<a href="ValorantGOKnife-details.html"><img src="assets/images/ValorantGOKnife.png"></a>
+					<a href="ValorantGOKnife-details.html"><h4> Valorant GO! Knife </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 950.00 </p>
@@ -85,8 +84,8 @@
 				</div>
 
 				<div class="col-4">
-					<img src="assets/images/ElderflameVandal.png">
-					<h4> Elderflame Vandal </h4>
+					<a href="ElderflameVandal-details.html"><img src="assets/images/ElderflameVandal.png"></a>
+					<a href="ElderflameVandal-details.html"><h4> Elderflame Vandal </h4></a>
 					<div class="rating">
 					</div>
 					<p>PHP 1000.00 </p>
@@ -115,7 +114,7 @@
 				<p>Available on Valo Skins</p>
 				<h1>Elderflame Vandal</h1>
 				<small>The Elderflame Vandal has some unique visual finish or animation effects. It is designed too look like a dragon that has a movement animation as of a dragon when equipped. </small>
-				<a href="" class="btn">BUY NOW &#8599; </a>
+				<a href="ElderflameVandal-details.html" class="btn">BUY NOW &#8599; </a>
 				</div>
 			</div>
 		</div>
@@ -140,7 +139,7 @@
 	</div>
 
 <!--- cart --->
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/scriptproductspage2.js"></script>
 	<!------ Toggle Menu ------>
 <script>
     var MenuItems = document.getElementById("MenuItems");
